sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:5: error: ')' expected but $XMLSTART$< found.
    while (getPancakeRadius(i)<getPancakeRadius(i+1) && i <getStackSize()){
                                                          ^BasicPancake:5: error: illegal start of simple expression
    while (getPancakeRadius(i)<getPancakeRadius(i+1) && i <getStackSize()){
                                                                         ^